Start with xml import and basic UI