@@ -12,6 +12,7 @@
         <javafx.version>25</javafx.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+        <openpdf.version>1.3.39</openpdf.version>
     </properties>
 
     <dependencies>
@@ -24,6 +25,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>${openpdf.version}</version>
         </dependency>
     </dependencies>
 
@@ -48,6 +55,10 @@
                         <module>javafx.controls</module>
                         <module>javafx.fxml</module>
                     </modules>
+                    <!-- JavaFX Native Access warning eliminieren -->
+                    <jvmArgs>
+                        --enable-native-access=javafx.graphics
+                    </jvmArgs>
                 </configuration>
             </plugin>
         </plugins>
